--- a/ecsspringterra/Dockerfile
+++ b/ecsspringterra/Dockerfile
@@ -1,7 +1,7 @@
-FROM ubuntu
+FROM openjdk:8
 MAINTAINER "saurav"
 RUN apt-get update
-RUN apt-get install -y openjdk-8-jdk
+#RUN apt-get install -y openjdk-8-jdk
 RUN apt-get install -y maven
 WORKDIR /springbootapp
 COPY . .
